View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031467 | Open CASCADE | OCCT:Foundation Classes | public | 2020-03-26 22:53 | 2020-12-02 17:12 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.5.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031467: Foundation Classes, OSD_MemInfo - disable reading /proc/%d/status with Emscripten | ||||
Description | Emscripten doesn't yet implement /proc/%d/status, however it implements portions of /proc file system, so that code within OSD_MemInfo has been left in expectation that it can be implemented by Emscripten in future. Unfortunately, Emscripten has more severe issues with /proc - reading may cause unexpected abort() on opening file due to unhandled/unexpected exception on JavaScript layer implementing FS. For some reason, OSD_MemInfo has no problem with a sample project, but crashes in larger project (having similar compiler flags from a first glance). https://github.com/emscripten-core/emscripten/issues/10774 As there is no use reading /proc/%d/status within current implementation, it is proposed disabling this code within OSD_MemInfo in case of Emscripten. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR31467 has been created by kgv. SHA-1: ee845ae78a5664c8e0abf8d8e1c4875b114f3e1b Detailed log of new commits: Author: kgv Date: Thu Mar 26 23:59:02 2020 +0300 0031467: Foundation Classes, OSD_MemInfo - disable reading /proc/%d/status with Emscripten OSD_MemInfo::Update() no more uses procfs with Emscripten. OSD_MemInfo::MemVirtual counter is now set to WebAssembly module heap length. |
|
Branch CR31467 has been updated forcibly by kgv. SHA-1: 66708cf5306df23fc72d619505052c3cefb1f709 |
|
Branch CR31467 has been updated forcibly by kgv. SHA-1: 3e15de4f68acedd2ee273dbec83b9c5939ef8235 |
|
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com/view/CR31467-master-KGV/ |
|
The patch was reviewed without remarks |
|
Combination - OCCT branch : IR-2020-03-27 master SHA - 420f5c868231b05a936c35a8f6a7aaf311cbad64 b063b8738ddd5eb1c5bbbdac861e8d2f7864961f Products branch : IR-2020-03-27 SHA - 61a33c5381d589ae31e1bab6ea750b3fbf4915f6 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16866.29000000024 / 16846.320000000138 [+0.12%] Products Total CPU difference: 11324.27000000008 / 11306.210000000074 [+0.16%] Windows-64-VC14: OCCT Total CPU difference: 18291.046875 / 18268.796875 [+0.12%] Products Total CPU difference: 13224.34375 / 13110.609375 [+0.87%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31467 has been deleted by inv. SHA-1: 3e15de4f68acedd2ee273dbec83b9c5939ef8235 |
occt: master 420f5c86 2020-03-26 20:59:02 Committer: bugmaster Details Diff |
0031467: Foundation Classes, OSD_MemInfo - disable reading /proc/%d/status with Emscripten OSD_MemInfo::Update() no more uses procfs with Emscripten. OSD_MemInfo::MemVirtual counter is now set to WebAssembly module heap length. |
Affected Issues 0031467 |
|
mod - src/OSD/OSD_MemInfo.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2020-03-26 22:53 | kgv | New Issue | |
2020-03-26 22:53 | kgv | Assigned To | => abv |
2020-03-26 22:56 | kgv | Description Updated | |
2020-03-26 23:58 | git | Note Added: 0091287 | |
2020-03-27 00:05 | git | Note Added: 0091288 | |
2020-03-27 00:17 | git | Note Added: 0091289 | |
2020-03-27 09:29 | kgv | Note Added: 0091290 | |
2020-03-27 09:29 | kgv | Assigned To | abv => osa |
2020-03-27 09:29 | kgv | Status | new => resolved |
2020-03-27 09:30 | kgv | Note Edited: 0091290 | |
2020-03-27 10:00 |
|
Note Added: 0091294 | |
2020-03-27 10:00 |
|
Assigned To | osa => bugmaster |
2020-03-27 10:00 |
|
Status | resolved => reviewed |
2020-03-28 13:33 | bugmaster | Note Added: 0091313 | |
2020-03-28 13:33 | bugmaster | Status | reviewed => tested |
2020-03-28 13:34 | bugmaster | Test case number | => Not required |
2020-03-28 13:36 | bugmaster | Changeset attached | => occt master 420f5c86 |
2020-03-28 13:36 | bugmaster | Status | tested => verified |
2020-03-28 13:36 | bugmaster | Resolution | open => fixed |
2020-03-28 13:46 | git | Note Added: 0091316 | |
2020-12-02 16:43 |
|
Fixed in Version | => 7.5.0 |
2020-12-02 17:12 |
|
Status | verified => closed |